<resources>
    <string name="app_name">AquaScale</string>
    <string name="title_activity_maps">Map</string>
    <string name="UserName">Name</string>
    <string name="Duration">Duration</string>
    <string name="DurationType">DurationType</string>>
    <string name="Location">Location</string>
    <string name="pick_date"></string>
    <string name="Description">Description</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string-array name="planets_array">
        <item>Medium</item>
        <item>Serious</item>
        <item>Light</item>
    </string-array>
    <string-array name="duration_array">
        <item>Hour</item>
        <item>Minutes</item>
    </string-array>
    >
    <string name="title_activity_report_water">ReportWaterActivity</string>

    <string name="hello">Hello, thank you for using AquaScale!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="ContinueBtn">Continue</string>
    <string name="parse_app_id">aquascale</string>

</resources>
